--- a/checkout-success.html
+++ b/checkout-success.html
@@ -1,50 +1,49 @@
-
 <!-- @format -->
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Rainydays | Checkout success</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's checkout success page." />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Company's checkout success page." />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/success.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
-        <a href="" id="checkout-help">Help with payment</a>
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" /></a>
+      <a href="contact-us.html" id="checkout-help">Help with payment</a>
     </header>
-    
     <main>
-        <div class="success__main">
-            <i class="far fa-check-circle fa-7x icon-success"></i>
-            <h1>Your order has been successfully confirmed</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis dui quis 
-                leo scelerisque sodales. Aliquam dapibus, tortor eu auctor consectetur, eros lectus 
-                interdum justo, vitae sollicitudin ipsum augue eu mi. Proin maximus, nulla non fringilla 
-                vulputate, justo massa ullamcorper tellus, in ullamcorper lacus massa sed enim. Integer 
-                risus nisi, consequat sed vehicula vel, tincidunt vel nisi. </p>
-            <div class="checkout-cta">
-                <a href="shop-men.html" class="btn-dark-green check-btn">Back to shopping</a>
-                <a href="index.html" class="btn-dark-green check-btn">Close</a>
-            </div>
+      <div class="success__main">
+        <i class="far fa-check-circle fa-7x icon-success"></i>
+        <h1>Your order has been successfully confirmed</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis dui quis leo scelerisque sodales.
+          Aliquam dapibus, tortor eu auctor consectetur, eros lectus interdum justo, vitae sollicitudin ipsum augue eu
+          mi. Proin maximus, nulla non fringilla vulputate, justo massa ullamcorper tellus, in ullamcorper lacus massa
+          sed enim. Integer risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
+        </p>
+        <div class="checkout-cta">
+          <a href="shop-men.html" class="cta-dark-green check-btn">Back to shopping</a>
+          <a href="index.html" class="cta-dark-green check-btn">Close</a>
         </div>
+      </div>
     </main>
     <footer>
-        <div class="footer__content">
-            <a href="contact-us.html">Help</a>
-          </div>
-          <div class="footer__content">
-            <p>Copyright &copy;</p>
-          </div>
-          <div class="footer__content footer__icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
+      <div class="footer__content">
+        <a href="contact-us.html">Help</a>
+      </div>
+      <div class="footer__content">
+        <p>Copyright &copy;</p>
+      </div>
+      <div class="footer__content footer__icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-youtube"></i>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
