--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -1,74 +1,72 @@
-
 <!-- @format -->
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Rainydays | Checkout payment</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's checkout payment page." />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Company's checkout payment page." />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/payment.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
-        <a href="" class="payment-help">Help with payment</a>
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" /></a>
+      <a href="contact-us.html" class="payment-help">Help with payment</a>
     </header>
-    
     <main>
-            <div class="payment-status">
-                <div>
-                    <i class="fas fa-check-circle fa-3x payment-icon"></i>
-                    <h2>Shipping info</h2>
-                </div>
-                <div>
-                    <i class="far fa-circle fa-3x payment-icon"></i>
-                    <h2>Payment Method</h2>
-                </div>
-                <div>
-                    <i class="far fa-circle fa-3x payment-icon_next"></i>
-                    <h2>Review</h2>
-                </div>
-            </div>
-            <div class="payment-title">
-                <h1>Payment Method</h1>
-            </div>
-            <div class="payment-info">
-                <form class="form_size">
-                    <h2>Add a payment method</h2>
-                    <input type="text" name="fullname" placeholder="Name of card">
-                    <input type="number" name="card-number" placeholder="Card number" max="16">
-                    <div class="mm-yy">
-                        <input type="number" id="name" name="month" placeholder="MM" max="2">
-                        <input type="number" id="year" name="year" placeholder="YY" max="2">
-                    </div>
-                    <input type="number" name="security-code" placeholder="Security code" max="3">
-                    <div class="payment-checkbox">
-                        <input type="checkbox" name="checkbox-card">
-                        <label for="checkbox-card">Remember this card</label>
-                    </div>
-                    <div class="payment-cta">
-                        <a href="shopping-bag.html" class="btn-dark-green payment-btn back">Back</a>
-                        <a href="checkout-success.html" class="btn-dark-green payment-btn">Save & Continue</a>
-                    </div>
-                </form>
-            </div>
+      <div class="payment-status">
+        <div>
+          <i class="fas fa-check-circle fa-3x payment-icon"></i>
+          <h2>Shipping info</h2>
+        </div>
+        <div>
+          <i class="far fa-circle fa-3x payment-icon"></i>
+          <h2>Payment Method</h2>
+        </div>
+        <div>
+          <i class="far fa-circle fa-3x payment-icon_next"></i>
+          <h2>Review</h2>
+        </div>
+      </div>
+      <div class="payment-title">
+        <h1>Payment Method</h1>
+      </div>
+      <div class="payment-info">
+        <form class="payment-form__size">
+          <h2>Add a payment method</h2>
+          <input type="text" name="fullname" placeholder="Name of card" />
+          <input type="number" name="card-number" placeholder="Card number" max="16" />
+          <div class="mm-yy">
+            <input type="number" id="name" name="month" placeholder="MM" max="2" />
+            <input type="number" id="year" name="year" placeholder="YY" max="2" />
+          </div>
+          <input type="number" name="security-code" placeholder="Security code" max="3" />
+          <div class="payment-checkbox">
+            <input type="checkbox" name="checkbox-card" />
+            <label for="checkbox-card">Remember this card</label>
+          </div>
+          <div class="payment-cta">
+            <a href="shopping-bag.html" class="cta-dark-green payment-btn back">Back</a>
+            <a href="checkout-success.html" class="cta-dark-green payment-btn">Save & Continue</a>
+          </div>
+        </form>
+      </div>
     </main>
     <footer>
-        <div class="footer__content">
-            <a href="contact-us.html">Help</a>
-          </div>
-          <div class="footer__content">
-            <p>Copyright &copy;</p>
-          </div>
-          <div class="footer__content footer__icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
+      <div class="footer__content">
+        <a href="contact-us.html">Help</a>
+      </div>
+      <div class="footer__content">
+        <p>Copyright &copy;</p>
+      </div>
+      <div class="footer__content footer__icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-youtube"></i>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
