--- a/contact-success.html
+++ b/contact-success.html
@@ -1,60 +1,68 @@
 <!-- @format -->
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Rainydays | Contact success</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's contact success page." />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Company's contact success page." />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/success.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <header>
-    <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
-    <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
-    <input type="checkbox" id="hamburger-menu">
-    <nav>
-      <ul>
+  </head>
+  <body>
+    <header>
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" /></a>
+      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <input type="checkbox" id="hamburger-menu" />
+      <nav>
+        <ul>
           <li><a href="shop-men.html">Men</a></li>
           <li><a href="shop-women.html">Women</a></li>
           <li><a href="about-us.html">About Us</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
-      </ul>
-      <div class="search-wrapper">
-        <li><input type="text" class="search-box" placeholder=""></li>
-        <i class="fas fa-search fa-xs search-icon"></i>
-      </div>
-      <div class="icon-wrapper">
-        <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
-        <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
-        <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
-      </div>
-    </nav>
-  </header>
-    
+        </ul>
+        <div class="search-wrapper">
+          <li><input type="text" class="search-box" placeholder="" /></li>
+          <i class="fas fa-search fa-xs search-icon"></i>
+        </div>
+        <div class="icon-wrapper">
+          <li>
+            <a href="login.html"><i class="far fa-user icon"></i></a>
+          </li>
+          <li>
+            <a href="favorites.html"><i class="far fa-heart icon"></i></a>
+          </li>
+          <li>
+            <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          </li>
+        </div>
+      </nav>
+    </header>
     <main>
       <div class="success__main contact__success">
         <h1>Confirmation of received message!</h1>
         <i class="far fa-check-circle fa-7x icon-success"></i>
-        <p>Your message ID is 591222. You will receive an email to PaulAskeladden@hotmail.com when we have looked at your message</p>
-        <a href="index.html" class="btn-dark-green">Back to home page</a>
+        <p>
+          Your message ID is 591222. You will receive an email to PaulAskeladden@hotmail.com when we have looked at your
+          message
+        </p>
+        <a href="index.html" class="cta-dark-green">Back to home page</a>
       </div>
     </main>
     <footer>
-        <div class="footer__content">
-            <a href="contact-us.html">Help</a>
-          </div>
-          <div class="footer__content">
-            <p>Copyright &copy;</p>
-          </div>
-          <div class="footer__content footer__icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
+      <div class="footer__content">
+        <a href="contact-us.html">Help</a>
+      </div>
+      <div class="footer__content">
+        <p>Copyright &copy;</p>
+      </div>
+      <div class="footer__content footer__icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-youtube"></i>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
