--- a/contact-us.html
+++ b/contact-us.html
@@ -1,97 +1,101 @@
 <!-- @format -->
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Rainydays | Contact</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's contact page." />
+  <head>
+    <title>Rainydays | Contact us</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Company's contact page." />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/contact.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
-        <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
-        <input type="checkbox" id="hamburger-menu">
-        <nav>
-          <ul>
-              <li><a href="shop-men.html">Men</a></li>
-              <li><a href="shop-women.html">Women</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contact-us.html" class="active">Contact Us</a></li>
-          </ul>
-          <div class="search-wrapper">
-            <li><input type="text" class="search-box" placeholder=""></li>
-            <i class="fas fa-search fa-xs search-icon"></i>
-          </div>
-          <div class="icon-wrapper">
-            <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
-            <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
-            <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
-          </div>
-        </nav>
-      </header>
-    
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" /></a>
+      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <input type="checkbox" id="hamburger-menu" />
+      <nav>
+        <ul>
+          <li><a href="shop-men.html">Men</a></li>
+          <li><a href="shop-women.html">Women</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="contact-us.html" class="active">Contact Us</a></li>
+        </ul>
+        <div class="search-wrapper">
+          <li><input type="text" class="search-box" placeholder="" /></li>
+          <i class="fas fa-search fa-xs search-icon"></i>
+        </div>
+        <div class="icon-wrapper">
+          <li>
+            <a href="login.html"><i class="far fa-user icon"></i></a>
+          </li>
+          <li>
+            <a href="favorites.html"><i class="far fa-heart icon"></i></a>
+          </li>
+          <li>
+            <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          </li>
+        </div>
+      </nav>
+    </header>
     <main>
-        <div class="main__contact">
-            <section class="contact__info">
-                <div>
-                    <h1>Get in touch</h1>
-                    <p>Customer service is available at all time in our website.</p>
-                    <p>Fill in the required form to send in your query. Please fill in as much information as possible.</p>
-                    <div class="contact__social">
-                        <h2>We are also on social media</h2>
-                        <a href=""><i class="fab fa-facebook-f fa-2x"></i></a>
-                        <a href=""><i class="fab fa-instagram fa-2x"></i></a>
-                        <a href=""><i class="fab fa-youtube fa-2x"></i></a>
-                    </div>
-                </div>
+      <div class="contact__main">
+        <section class="contact__info">
+          <div>
+            <h1>Get in touch</h1>
+            <p>Customer service is available at all time in our website.</p>
+            <p>Fill in the required form to send in your query. Please fill in as much information as possible.</p>
+            <div class="contact__social">
+              <h2>We are also on social media</h2>
+              <a href=""><i class="fab fa-facebook-f fa-2x"></i></a>
+              <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+              <a href=""><i class="fab fa-youtube fa-2x"></i></a>
+            </div>
+          </div>
         </section>
         <section class="contact__form">
-            <form action="contact-success.html">
-                <fieldset>
-                    <div class="form-wrapper">
-                        <label for="name">Your full name</label>
-                        <input type="text" name="name" id="name">
-                        <label for="email">Your email</label>
-                        <input type="email" name="email" id="email">
-                        <label for="subject">Subject</label>
-                        <select name="subject" id="subject">
-                            <option value=""></option>
-                            <option value="account">Account</option>
-                            <option value="purchase">Purchase</option>
-                            <option value="feedback">Feedback</option>
-                            <option value="other">Other</option>
-                        </select>
-                        <label for="message">Message</label>
-                        <textarea name="message" id="message"></textarea>
-                        <div>
-                            <input type="checkbox" id="email-updates">
-                            <label for="email-updates">Sign up for email updates</label>
-                        </div>
-                        <input type="submit" value="Send" class="send-button">
-                    </div>
-                </fieldset>
-            </form>
+          <form action="contact-success.html">
+            <fieldset>
+              <div class="contact__form-wrapper">
+                <label for="name">Your full name</label>
+                <input type="text" name="name" id="name" />
+                <label for="email">Your email</label>
+                <input type="email" name="email" id="email" />
+                <label for="subject">Subject</label>
+                <select name="subject" id="subject">
+                  <option value=""></option>
+                  <option value="account">Account</option>
+                  <option value="purchase">Purchase</option>
+                  <option value="feedback">Feedback</option>
+                  <option value="other">Other</option>
+                </select>
+                <label for="message">Message</label>
+                <textarea name="message" id="message"></textarea>
+                <div>
+                  <input type="checkbox" id="email-updates" />
+                  <label for="email-updates">Sign up for email updates</label>
+                </div>
+                <input type="submit" value="Send" class="send-button" />
+              </div>
+            </fieldset>
+          </form>
         </section>
-        </div>
-       
+      </div>
     </main>
     <footer>
-        <div class="footer__content">
-            <a href="contact-us.html">Help</a>
-          </div>
-          <div class="footer__content">
-            <p>Copyright &copy;</p>
-          </div>
-          <div class="footer__content footer__icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
+      <div class="footer__content">
+        <a href="contact-us.html">Help</a>
+      </div>
+      <div class="footer__content">
+        <p>Copyright &copy;</p>
+      </div>
+      <div class="footer__content footer__icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-youtube"></i>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
