--- a/login.html
+++ b/login.html
@@ -1,40 +1,45 @@
 <!-- @format -->
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Rainydays | Login</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's login page." />
-    <link href="css/login.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Login page to user account." />
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/login.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <header>
-    <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
-    <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
-    <input type="checkbox" id="hamburger-menu">
-    <nav>
-      <ul>
+  </head>
+  <body>
+    <header>
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" /></a>
+      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <input type="checkbox" id="hamburger-menu" />
+      <nav>
+        <ul>
           <li><a href="shop-men.html">Men</a></li>
           <li><a href="shop-women.html">Women</a></li>
           <li><a href="about-us.html">About Us</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
-      </ul>
-      <div class="search-wrapper">
-        <li><input type="text" class="search-box" placeholder=""></li>
-        <i class="fas fa-search fa-xs search-icon"></i>
-      </div>
-      <div class="icon-wrapper">
-        <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
-        <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
-        <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
-      </div>
-    </nav>
-  </header>
-    
+        </ul>
+        <div class="search-wrapper">
+          <li><input type="text" class="search-box" placeholder="" /></li>
+          <i class="fas fa-search fa-xs search-icon"></i>
+        </div>
+        <div class="icon-wrapper">
+          <li>
+            <a href="login.html"><i class="far fa-user icon"></i></a>
+          </li>
+          <li>
+            <a href="favorites.html"><i class="far fa-heart icon"></i></a>
+          </li>
+          <li>
+            <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          </li>
+        </div>
+      </nav>
+    </header>
     <main>
       <div class="login__main">
         <div class="login__info">
@@ -44,39 +49,41 @@
           </div>
         </div>
         <div class="login__form">
-          <form action="index.html" >
-              <h1>Login</h1>
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email">
-              <label for="password">Password</label>
-              <input type="password" name="password" id="password">
-              <div class="remember">
-                <div class="checkbox-remember">
-                  <input type="checkbox" id="remember-me">
-                  <label for="remember-me">Remember me</label>
-                </div>
-                <a href="contact-us.html" class="forgot-password">Forgot your password?</a>
+          <form action="index.html">
+            <h1>Login</h1>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" />
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" />
+            <div class="remember">
+              <div class="checkbox-remember">
+                <input type="checkbox" id="remember-me" />
+                <label for="remember-me">Remember me</label>
               </div>
-              <input type="submit" value="Log in" class="cta-green" id="login-button">
-              <p>Or</p>
-              <a href="" class="facebook-btn">Log in with Facebook</a>
-              <p>New member? <a href=""><strong>Join us here</strong></a> </p>
+              <a href="contact-us.html" class="forgot-password">Forgot your password?</a>
+            </div>
+            <input type="submit" value="Log in" class="cta-green" id="login-button" />
+            <p>Or</p>
+            <a href="" class="facebook-btn">Log in with Facebook</a>
+            <p>
+              New member? <a href=""><strong>Join us here</strong></a>
+            </p>
           </form>
         </div>
       </div>
     </main>
     <footer>
-        <div class="footer__content">
-            <a href="contact-us.html">Help</a>
-          </div>
-          <div class="footer__content">
-            <p>Copyright &copy;</p>
-          </div>
-          <div class="footer__content footer__icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
+      <div class="footer__content">
+        <a href="contact-us.html">Help</a>
+      </div>
+      <div class="footer__content">
+        <p>Copyright &copy;</p>
+      </div>
+      <div class="footer__content footer__icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-youtube"></i>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
