--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -35,7 +35,7 @@
         <h1>Payment Method</h1>
       </div>
       <div class="payment-info">
-        <form class="payment-form__size">
+        <form>
           <h2>Add a payment method</h2>
           <input type="text" name="fullname" placeholder="Name of card" />
           <input type="number" name="card-number" placeholder="Card number" max="16" />
