small fixes update

--- a/checkout-success.html
+++ b/checkout-success.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" /></a>
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo"/></a>
       <a href="contact-us.html" id="checkout-help">Help with payment</a>
     </header>
     <main>
