--- a/products/seasonal-autumn-black.html
+++ b/products/seasonal-autumn-black.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"><img src="../images/RainyDays_Logo.png" class="logo" /></a>
+      <a href="../index.html"><img src="../images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
       <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
@@ -24,19 +24,13 @@
           <li><a href="../contact-us.html">Contact Us</a></li>
         </ul>
         <div class="search-wrapper">
-          <li><input type="text" class="search-box" placeholder="" /></li>
+          <input type="text" class="search-box" placeholder="" />
           <i class="fas fa-search fa-xs search-icon"></i>
         </div>
         <div class="icon-wrapper">
-          <li>
-            <a href="../login.html"><i class="far fa-user icon"></i></a>
-          </li>
-          <li>
-            <a href="../favorites.html"><i class="far fa-heart icon"></i></a>
-          </li>
-          <li>
-            <a href="../shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
-          </li>
+          <a href="../login.html"><i class="far fa-user icon"></i></a>
+          <a href="../favorites.html"><i class="far fa-heart icon"></i></a>
+          <a href="../shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
         </div>
       </nav>
     </header>
