--- a/about-us.html
+++ b/about-us.html
@@ -9,23 +9,38 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/about.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b9235904b4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2390664,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2390664, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo"/></a>
-      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <a href="index.html"
+        ><img
+          src="images/RainyDays_Logo.png"
+          class="logo"
+          alt="RainyDays's logo"
+      /></a>
+      <label for="hamburger-menu"
+        ><i class="fas fa-bars" id="hamburger-icon"></i
+      ></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -35,13 +50,15 @@
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
         <div class="search-wrapper">
-          <input type="text" class="search-box" placeholder="">
+          <input type="text" class="search-box" placeholder="" />
           <i class="fas fa-search fa-xs search-icon"></i>
         </div>
         <div class="icon-wrapper">
           <a href="login.html"><i class="far fa-user icon"></i></a>
           <a href="favorites.html"><i class="far fa-heart icon"></i></a>
-          <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a>
+          <a href="shopping-bag.html"
+            ><i class="fas fa-shopping-cart icon"></i
+          ></a>
         </div>
       </nav>
     </header>
@@ -50,15 +67,18 @@
       <div class="about__section">
         <h1>About us</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis dui quis leo scelerisque sodales.
-          Aliquam dapibus, tortor eu auctor consectetur, eros lectus interdum justo, vitae sollicitudin ipsum augue eu
-          mi. Proin maximus, nulla non fringilla vulputate, justo massa ullamcorper tellus, in ullamcorper lacus massa
-          sed enim. Integer risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+          mattis dui quis leo scelerisque sodales. Aliquam dapibus, tortor eu
+          auctor consectetur, eros lectus interdum justo, vitae sollicitudin
+          ipsum augue eu mi. Proin maximus, nulla non fringilla vulputate, justo
+          massa ullamcorper tellus, in ullamcorper lacus massa sed enim. Integer
+          risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
         </p>
         <p>
-          Nulla convallis, ipsum vel vestibulum dapibus, nunc magna auctor sapien, eu commodo risus nibh vitae magna.
-          Suspendisse sodales leo vel fringilla consequat. Maecenas eget vestibulum orci. Nulla tristique nulla quis
-          massa molestie, in congue purus maximus.
+          Nulla convallis, ipsum vel vestibulum dapibus, nunc magna auctor
+          sapien, eu commodo risus nibh vitae magna. Suspendisse sodales leo vel
+          fringilla consequat. Maecenas eget vestibulum orci. Nulla tristique
+          nulla quis massa molestie, in congue purus maximus.
         </p>
         <a href="shop-women.html" class="cta">Discover our products</a>
       </div>
