--- a/checkout-success.html
+++ b/checkout-success.html
@@ -9,22 +9,35 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/success.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b9235904b4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2390664,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2390664, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo"/></a>
+      <a href="index.html"
+        ><img
+          src="images/RainyDays_Logo.png"
+          class="logo"
+          alt="RainyDays's logo"
+      /></a>
       <a href="contact-us.html" id="checkout-help">Help with payment</a>
     </header>
     <main>
@@ -32,13 +45,17 @@
         <i class="far fa-check-circle fa-7x icon-success"></i>
         <h1>Your order has been successfully confirmed</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis dui quis leo scelerisque sodales.
-          Aliquam dapibus, tortor eu auctor consectetur, eros lectus interdum justo, vitae sollicitudin ipsum augue eu
-          mi. Proin maximus, nulla non fringilla vulputate, justo massa ullamcorper tellus, in ullamcorper lacus massa
-          sed enim. Integer risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+          mattis dui quis leo scelerisque sodales. Aliquam dapibus, tortor eu
+          auctor consectetur, eros lectus interdum justo, vitae sollicitudin
+          ipsum augue eu mi. Proin maximus, nulla non fringilla vulputate, justo
+          massa ullamcorper tellus, in ullamcorper lacus massa sed enim. Integer
+          risus nisi, consequat sed vehicula vel, tincidunt vel nisi.
         </p>
         <div class="checkout-cta">
-          <a href="shop-men.html" class="cta-dark-green check-btn">Back to shopping</a>
+          <a href="shop-men.html" class="cta-dark-green check-btn"
+            >Back to shopping</a
+          >
           <a href="index.html" class="cta-dark-green check-btn">Close</a>
         </div>
       </div>
