--- a/shop-women.html
+++ b/shop-women.html
@@ -9,23 +9,38 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/shop.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b9235904b4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2390664,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2390664, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo"/></a>
-      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <a href="index.html"
+        ><img
+          src="images/RainyDays_Logo.png"
+          class="logo"
+          alt="RainyDays's logo"
+      /></a>
+      <label for="hamburger-menu"
+        ><i class="fas fa-bars" id="hamburger-icon"></i
+      ></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -35,13 +50,15 @@
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
         <div class="search-wrapper">
-          <input type="text" class="search-box" placeholder="">
+          <input type="text" class="search-box" placeholder="" />
           <i class="fas fa-search fa-xs search-icon"></i>
         </div>
         <div class="icon-wrapper">
           <a href="login.html"><i class="far fa-user icon"></i></a>
           <a href="favorites.html"><i class="far fa-heart icon"></i></a>
-          <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a>
+          <a href="shopping-bag.html"
+            ><i class="fas fa-shopping-cart icon"></i
+          ></a>
         </div>
       </nav>
     </header>
@@ -81,7 +98,12 @@
                 <option value="$200-$300">$200-$300</option>
                 <option value="over">Over $300</option>
               </select>
-              <input type="submit" name="save-changes" value="Save changes" class="cta-green" />
+              <input
+                type="submit"
+                name="save-changes"
+                value="Save changes"
+                class="cta-green"
+              />
             </div>
           </form>
         </section>
@@ -110,7 +132,10 @@
         <section class="popular-products">
           <a href="products/seasonal-autumn-black.html">
             <div>
-              <img src="images/product-img.jpg" alt="Yellow seasonal autumn rain jacket" />
+              <img
+                src="images/product-img.jpg"
+                alt="Yellow seasonal autumn rain jacket"
+              />
               <h3>RainyDays</h3>
               <p>Seasonal autumn rain jacket</p>
               <p>1999,-</p>
@@ -118,7 +143,10 @@
           </a>
           <a href="products/seasonal-autumn-black.html">
             <div>
-              <img src="images/product-img.jpg" alt="Black seasonal spring rain jacket" />
+              <img
+                src="images/product-img.jpg"
+                alt="Black seasonal spring rain jacket"
+              />
               <h3>RainyDays</h3>
               <p>Seasonal spring rain jacket</p>
               <p>1999,-</p>
@@ -126,7 +154,10 @@
           </a>
           <a href="products/seasonal-autumn-black.html">
             <div>
-              <img src="images/product-img.jpg" alt="Blue seasonal winter rain jacket" />
+              <img
+                src="images/product-img.jpg"
+                alt="Blue seasonal winter rain jacket"
+              />
               <h3>RainyDays</h3>
               <p>Seasonal winter rain jacket</p>
               <p>2999,-</p>
