--- a/index.html
+++ b/index.html
@@ -8,23 +8,38 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b9235904b4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2390664,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2390664, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
-      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <a href="index.html"
+        ><img
+          src="images/RainyDays_Logo.png"
+          class="logo"
+          alt="RainyDays's logo"
+      /></a>
+      <label for="hamburger-menu"
+        ><i class="fas fa-bars" id="hamburger-icon"></i
+      ></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -34,13 +49,15 @@
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
         <div class="search-wrapper">
-          <input type="text" class="search-box" placeholder="">
+          <input type="text" class="search-box" placeholder="" />
           <i class="fas fa-search fa-xs search-icon"></i>
         </div>
         <div class="icon-wrapper">
           <a href="login.html"><i class="far fa-user icon"></i></a>
           <a href="favorites.html"><i class="far fa-heart icon"></i></a>
-          <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a>
+          <a href="shopping-bag.html"
+            ><i class="fas fa-shopping-cart icon"></i
+          ></a>
         </div>
       </nav>
     </header>
@@ -48,7 +65,10 @@
       <section class="welcome">
         <div class="welcome__content">
           <h1>Pushing the Comfort Zone</h1>
-          <p>Comfortable high quality rain jackets suitable to all outdoor activities.</p>
+          <p>
+            Comfortable high quality rain jackets suitable to all outdoor
+            activities.
+          </p>
           <a href="shop-men.html" class="cta">Shop</a>
         </div>
         <div class="welcome__img"></div>
@@ -64,7 +84,10 @@
         </div>
         <div class="service__info">
           <h2>Secure payments</h2>
-          <p>Several payments available. Choose the one you are the most comfortable with.</p>
+          <p>
+            Several payments available. Choose the one you are the most
+            comfortable with.
+          </p>
         </div>
       </section>
       <section class="explore">
@@ -85,9 +108,10 @@
         <div class="review__customer">
           <h2>Customer Review</h2>
           <p>
-            «Loving this beautiful rain jacket I recently got from RainyDays! It is perfect for any outdoor activity and
-            it has kept me dry and comfortable. An extra bonus that the delivery was fast, I got my package within a few
-            days!»
+            «Loving this beautiful rain jacket I recently got from RainyDays! It
+            is perfect for any outdoor activity and it has kept me dry and
+            comfortable. An extra bonus that the delivery was fast, I got my
+            package within a few days!»
           </p>
           <p>- Susan Johnson</p>
         </div>
@@ -96,7 +120,10 @@
         <h2>Popular Products</h2>
         <a href="products/seasonal-autumn-black.html">
           <div class="product">
-            <img src="images/product-img.jpg" alt="Yellow seasonal autumn rain jacket" />
+            <img
+              src="images/product-img.jpg"
+              alt="Yellow seasonal autumn rain jacket"
+            />
             <h3>RainyDays</h3>
             <p>Seasonal autumn rain jacket</p>
             <p>1999,-</p>
@@ -104,7 +131,10 @@
         </a>
         <a href="products/seasonal-autumn-black.html">
           <div class="product">
-            <img src="images/product-img.jpg" alt="Black seasonal spring rain jacket" />
+            <img
+              src="images/product-img.jpg"
+              alt="Black seasonal spring rain jacket"
+            />
             <h3>RainyDays</h3>
             <p>Seasonal spring rain jacket</p>
             <p>1999,-</p>
@@ -112,7 +142,10 @@
         </a>
         <a href="products/seasonal-autumn-black.html">
           <div class="product">
-            <img src="images/product-img.jpg" alt="Blue seasonal winter rain jacket" />
+            <img
+              src="images/product-img.jpg"
+              alt="Blue seasonal winter rain jacket"
+            />
             <h3>RainyDays</h3>
             <p>Seasonal winter rain jacket</p>
             <p>2999,-</p>
