--- a/login.html
+++ b/login.html
@@ -9,23 +9,38 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/login.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b9235904b4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2390664,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2390664, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo"/></a>
-      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <a href="index.html"
+        ><img
+          src="images/RainyDays_Logo.png"
+          class="logo"
+          alt="RainyDays's logo"
+      /></a>
+      <label for="hamburger-menu"
+        ><i class="fas fa-bars" id="hamburger-icon"></i
+      ></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -35,13 +50,15 @@
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
         <div class="search-wrapper">
-          <input type="text" class="search-box" placeholder="">
+          <input type="text" class="search-box" placeholder="" />
           <i class="fas fa-search fa-xs search-icon"></i>
         </div>
         <div class="icon-wrapper">
           <a href="login.html"><i class="far fa-user icon"></i></a>
           <a href="favorites.html"><i class="far fa-heart icon"></i></a>
-          <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a>
+          <a href="shopping-bag.html"
+            ><i class="fas fa-shopping-cart icon"></i
+          ></a>
         </div>
       </nav>
     </header>
@@ -50,7 +67,10 @@
         <div class="login__info">
           <div class="login__text">
             <h1>Welcome back!</h1>
-            <p>Log in to manage your user account, browse our products and see the latest news.</p>
+            <p>
+              Log in to manage your user account, browse our products and see
+              the latest news.
+            </p>
           </div>
         </div>
         <div class="login__form">
@@ -65,9 +85,16 @@
                 <input type="checkbox" id="remember-me" />
                 <label for="remember-me">Remember me</label>
               </div>
-              <a href="contact-us.html" class="forgot-password">Forgot your password?</a>
+              <a href="contact-us.html" class="forgot-password"
+                >Forgot your password?</a
+              >
             </div>
-            <input type="submit" value="Log in" class="cta-green" id="login-button" />
+            <input
+              type="submit"
+              value="Log in"
+              class="cta-green"
+              id="login-button"
+            />
             <p>Or</p>
             <a href="" class="facebook-btn">Log in with Facebook</a>
             <p>
