--- a/products/seasonal-autumn-black.html
+++ b/products/seasonal-autumn-black.html
@@ -9,23 +9,38 @@
     <link href="../css/styles.css" rel="stylesheet" />
     <link href="../css/product.css" rel="stylesheet" />
     <link href="../css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b9235904b4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2390664,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2390664, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
-      <a href="../index.html"><img src="../images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo" /></a>
-      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <a href="../index.html"
+        ><img
+          src="../images/RainyDays_Logo.png"
+          class="logo"
+          alt="RainyDays's logo"
+      /></a>
+      <label for="hamburger-menu"
+        ><i class="fas fa-bars" id="hamburger-icon"></i
+      ></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -41,7 +56,9 @@
         <div class="icon-wrapper">
           <a href="../login.html"><i class="far fa-user icon"></i></a>
           <a href="../favorites.html"><i class="far fa-heart icon"></i></a>
-          <a href="../shopping-bag.html"><i class="fas fa-shopping-cart icon"></i></a>
+          <a href="../shopping-bag.html"
+            ><i class="fas fa-shopping-cart icon"></i
+          ></a>
         </div>
       </nav>
     </header>
@@ -49,7 +66,8 @@
       <div class="seasonal-autumn__main">
         <div class="product__links">
           <p>
-            <a href="../index.html">Home</a> >> <a href="../shop-women.html">Women rain jackets</a> >> Rainydays -
+            <a href="../index.html">Home</a> >>
+            <a href="../shop-women.html">Women rain jackets</a> >> Rainydays -
             seasonal autumn rain jacket
           </p>
         </div>
@@ -57,13 +75,22 @@
           <section class="product__img">
             <div class="seasonal-autumn__products-wrapper">
               <div class="img1">
-                <img src="../images/product-img.jpg" alt="Yellow seasonal autumn rain jacket" />
+                <img
+                  src="../images/product-img.jpg"
+                  alt="Yellow seasonal autumn rain jacket"
+                />
               </div>
               <div class="img2">
-                <img src="../images/product-img.jpg" alt="Frontside yellow seasonal autumn rain jacket" />
+                <img
+                  src="../images/product-img.jpg"
+                  alt="Frontside yellow seasonal autumn rain jacket"
+                />
               </div>
               <div class="img3">
-                <img src="../images/product-img.jpg" alt="Backside yellow seasonal autumn rain jacket" />
+                <img
+                  src="../images/product-img.jpg"
+                  alt="Backside yellow seasonal autumn rain jacket"
+                />
               </div>
             </div>
           </section>
@@ -86,13 +113,19 @@
                 <option value="Large">Large</option>
               </select>
               <div class="product__cta">
-                <a href="../shopping-bag.html" class="cta-green cta-cart">Add to cart</a>
-                <a href="../favorites.html" class="cta-heart product-heart"><i class="far fa-heart heart-icon"></i></a>
+                <a href="../shopping-bag.html" class="cta-green cta-cart"
+                  >Add to cart</a
+                >
+                <a href="../favorites.html" class="cta-heart product-heart"
+                  ><i class="far fa-heart heart-icon"></i
+                ></a>
               </div>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis dictum, fermentum ligula
-                vitae, scelerisque sem. Nunc aliquam, neque non dignissim pulvinar, justo augue placerat lacus, vitae
-                vehicula velit arcu a velit. Quisque semper rhonc
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Phasellus vitae turpis dictum, fermentum ligula vitae,
+                scelerisque sem. Nunc aliquam, neque non dignissim pulvinar,
+                justo augue placerat lacus, vitae vehicula velit arcu a velit.
+                Quisque semper rhonc
               </p>
             </div>
           </section>
