--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -9,23 +9,38 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/shopping-bag.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b9235904b4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2390664,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2390664, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo" alt="RainyDays's logo"/></a>
-      <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+      <a href="index.html"
+        ><img
+          src="images/RainyDays_Logo.png"
+          class="logo"
+          alt="RainyDays's logo"
+      /></a>
+      <label for="hamburger-menu"
+        ><i class="fas fa-bars" id="hamburger-icon"></i
+      ></label>
       <input type="checkbox" id="hamburger-menu" />
       <nav>
         <ul>
@@ -35,13 +50,15 @@
           <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
         <div class="search-wrapper">
-          <input type="text" class="search-box" placeholder="">
+          <input type="text" class="search-box" placeholder="" />
           <i class="fas fa-search fa-xs search-icon"></i>
         </div>
         <div class="icon-wrapper">
           <a href="login.html"><i class="far fa-user icon"></i></a>
           <a href="favorites.html"><i class="far fa-heart icon"></i></a>
-          <a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a>
+          <a href="shopping-bag.html"
+            ><i class="fas fa-shopping-cart icon"></i
+          ></a>
         </div>
       </nav>
     </header>
@@ -52,7 +69,10 @@
         <div class="product__wrapper">
           <section class="product__info">
             <div class="product-added first-product-added">
-              <img src="images/product-img.jpg" alt="Yellow seasonal autumn rain jacket" />
+              <img
+                src="images/product-img.jpg"
+                alt="Yellow seasonal autumn rain jacket"
+              />
               <div class="product__description">
                 <h3>RainyDays</h3>
                 <p>Seasonal autumn rain jacket</p>
@@ -74,7 +94,10 @@
               <i class="fas fa-trash-alt"></i>
             </div>
             <div class="product-added">
-              <img src="images/product-img.jpg" alt="Black seasonal spring rain jacket" />
+              <img
+                src="images/product-img.jpg"
+                alt="Black seasonal spring rain jacket"
+              />
               <div class="product__description">
                 <h3>RainyDays</h3>
                 <p>Seasonal spring rain jacket</p>
@@ -112,7 +135,9 @@
                 <p>3998 NOK</p>
               </div>
             </div>
-            <a href="checkout-payment.html" class="cta summary-btn">Go to Payment</a>
+            <a href="checkout-payment.html" class="cta summary-btn"
+              >Go to Payment</a
+            >
           </section>
         </div>
       </div>
