--- a/index.html
+++ b/index.html
@@ -12,22 +12,6 @@
       src="https://kit.fontawesome.com/b9235904b4.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2390664, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
   </head>
   <body>
     <header>
@@ -160,6 +144,10 @@
           </div>
         </a>
       </section>
+      <section>
+        <h2>Popular Products</h2>
+        <div class="example-list"></div>
+      </section>
     </main>
     <footer>
       <div class="footer__content">
@@ -174,5 +162,6 @@
         <i class="fab fa-youtube"></i>
       </div>
     </footer>
+    <script src="js/products.js" type="module"></script>
   </body>
 </html>
