--- a/index.html
+++ b/index.html
@@ -100,53 +100,9 @@
           <p>- Susan Johnson</p>
         </div>
       </section>
-      <section class="popular-products">
+      <section class="popular-section">
         <h2>Popular Products</h2>
-        <a href="products/seasonal-autumn-black.html">
-          <div class="product">
-            <img
-              src="images/product-img.jpg"
-              alt="Yellow seasonal autumn rain jacket"
-            />
-            <h3>RainyDays</h3>
-            <p>Seasonal autumn rain jacket</p>
-            <p>1999,-</p>
-          </div>
-        </a>
-        <a href="products/seasonal-autumn-black.html">
-          <div class="product">
-            <img
-              src="images/product-img.jpg"
-              alt="Black seasonal spring rain jacket"
-            />
-            <h3>RainyDays</h3>
-            <p>Seasonal spring rain jacket</p>
-            <p>1999,-</p>
-          </div>
-        </a>
-        <a href="products/seasonal-autumn-black.html">
-          <div class="product">
-            <img
-              src="images/product-img.jpg"
-              alt="Blue seasonal winter rain jacket"
-            />
-            <h3>RainyDays</h3>
-            <p>Seasonal winter rain jacket</p>
-            <p>2999,-</p>
-          </div>
-        </a>
-        <a href="products/seasonal-autumn-black.html">
-          <div class="product">
-            <img src="images/product-img.jpg" alt="Red seasonal outdoor" />
-            <h3>RainyDays</h3>
-            <p>Seasonal outdoor</p>
-            <p>2999,-</p>
-          </div>
-        </a>
-      </section>
-      <section>
-        <h2>Popular Products</h2>
-        <div class="example-list"></div>
+        <div class="popular-products"></div>
       </section>
     </main>
     <footer>
