--- a/shop-men.html
+++ b/shop-men.html
@@ -13,22 +13,6 @@
       src="https://kit.fontawesome.com/b9235904b4.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2390664, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
   </head>
   <body>
     <header>
@@ -129,48 +113,8 @@
             </div>
           </form>
         </div>
-        <section class="popular-products">
-          <a href="products/seasonal-autumn-black.html">
-            <div>
-              <img
-                src="images/product-img.jpg"
-                alt="Yellow seasonal autumn rain jacket"
-              />
-              <h3>RainyDays</h3>
-              <p>Seasonal autumn rain jacket</p>
-              <p>1999,-</p>
-            </div>
-          </a>
-          <a href="products/seasonal-autumn-black.html">
-            <div>
-              <img
-                src="images/product-img.jpg"
-                alt="Black seasonal spring rain jacket"
-              />
-              <h3>RainyDays</h3>
-              <p>Seasonal spring rain jacket</p>
-              <p>1999,-</p>
-            </div>
-          </a>
-          <a href="products/seasonal-autumn-black.html">
-            <div>
-              <img
-                src="images/product-img.jpg"
-                alt="Blue seasonal winter rain jacket"
-              />
-              <h3>RainyDays</h3>
-              <p>Seasonal winter rain jacket</p>
-              <p>2999,-</p>
-            </div>
-          </a>
-          <a href="products/seasonal-autumn-black.html">
-            <div>
-              <img src="images/product-img.jpg" alt="Red seasonal outdoor" />
-              <h3>RainyDays</h3>
-              <p>Seasonal outdoor</p>
-              <p>2999,-</p>
-            </div>
-          </a>
+        <section class="popular-section">
+          <div class="popular-products shop-section"></div>
         </section>
       </div>
     </main>
@@ -187,5 +131,6 @@
         <i class="fab fa-youtube"></i>
       </div>
     </footer>
+    <script src="js/products.js" type="module"></script>
   </body>
 </html>
