--- a/products/product.html
+++ b/products/product.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rainydays | Seasonal autumn rain jacket</title>
+    <title>Rainydays | Product description</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Black seasonal autumn rain jacket." />
@@ -13,22 +13,6 @@
       src="https://kit.fontawesome.com/b9235904b4.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Hotjar Tracking Code for https://admiring-haibt-3ff3c7.netlify.app/ -->
-    <script>
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2390664, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
   </head>
   <body>
     <header>
@@ -65,39 +49,15 @@
     <main>
       <div class="seasonal-autumn__main">
         <div class="product__links">
-          <p>
-            <a href="../index.html">Home</a> >>
-            <a href="../shop-women.html">Women rain jackets</a> >> Rainydays -
-            seasonal autumn rain jacket
-          </p>
+          <p class="breadcrumb"></p>
         </div>
         <div class="main-wrapper">
           <section class="product__img">
-            <div class="seasonal-autumn__products-wrapper">
-              <div class="img1">
-                <img
-                  src="../images/product-img.jpg"
-                  alt="Yellow seasonal autumn rain jacket"
-                />
-              </div>
-              <div class="img2">
-                <img
-                  src="../images/product-img.jpg"
-                  alt="Frontside yellow seasonal autumn rain jacket"
-                />
-              </div>
-              <div class="img3">
-                <img
-                  src="../images/product-img.jpg"
-                  alt="Backside yellow seasonal autumn rain jacket"
-                />
-              </div>
-            </div>
+            <div class="product__img2"></div>
           </section>
           <section class="seasonal-autumn">
             <div>
-              <h1>RainyDays</h1>
-              <h2>Seasonal autumn rain</h2>
+              <div class="product-specification"></div>
               <h3>Colors</h3>
               <div class="circles">
                 <div><i class="fas fa-circle fa-3x yellow"></i></div>
@@ -113,9 +73,8 @@
                 <option value="Large">Large</option>
               </select>
               <div class="product__cta">
-                <a href="../shopping-bag.html" class="cta-green cta-cart"
-                  >Add to cart</a
-                >
+                <div class="cart-btn">
+                </div>
                 <a href="../favorites.html" class="cta-heart product-heart"
                   ><i class="far fa-heart heart-icon"></i
                 ></a>
@@ -131,6 +90,8 @@
           </section>
         </div>
       </div>
+      <section class="cart-wrapper">
+      </section>
     </main>
     <footer>
       <div class="footer__content">
@@ -145,5 +106,6 @@
         <i class="fab fa-youtube"></i>
       </div>
     </footer>
+    <script src="../js/productDetails.js" type="module"></script>
   </body>
 </html>
