update search box on contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -34,7 +34,7 @@
           <li><a href="contact-us.html" class="active">Contact Us</a></li>
         </ul>
         <div class="search-wrapper">
-          <input type="text" class="search-box" placeholder="" />
+          <input type="text" class="search-box contact__search-box" placeholder="" />
           <i class="fas fa-search fa-xs search-icon"></i>
         </div>
         <div class="icon-wrapper">
